# Onegin

./: CMakeLists.txt  Doxyfile  readme.md
docs/html/: algorithm_8c.html  algorithm_8h.html  algorithm_8h_source.html  annotated.html  bool_8h.html  bool_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  main_8c.html  menudata.js  string__utils_8c.html  string__utils_8h.html  string__utils_8h_source.html  structVector-members.html  structVector.html  test__algorithm_8c.html  test__string__utils_8c.html  test__vector_8c.html  vector_8c.html  vector_8h.html  vector_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+2 more)
include/: algorithm.h  bool.h  string_utils.h  vector.h
src/: algorithm.c  main.c  string_utils.c  test_algorithm.c  test_string_utils.c  test_vector.c  vector.c
